@@ -1,2 +1,2 @@
-PATH='/opt/bin'
+PATH='/opt/vc/bin:/opt/vc/sbin'
 LDPATH='/opt/vc/lib'
